Issue #122 - Updating styles to prevent header overflow by decrease logo size on mobile.  Adjusting font-size in nav-actions to help prevent nav-wrapping.

--- a/scss/base/_layout.scss
+++ b/scss/base/_layout.scss
@@ -10,9 +10,11 @@
   }
 }
 
-.region-nav-branding,
-.region-nav-additional {
-  flex-shrink: 0;
+@include media-breakpoint-up('md') {
+  .region-nav-branding,
+  .region-nav-additional {
+    flex-shrink: 0;
+  }
 }
 
 // Add a max width the container-fluid and increasing padding on larger
